--- a/client/package.json
+++ b/client/package.json
@@ -3,7 +3,8 @@
   "scripts": {
     "dev": "webpack-dev-server",
     "build": "webpack --mode production",
-    "start": "webpack --watchAll"
+    "start": "webpack --watchAll",
+    "server": "nodemon server.js"
   },
   "author": "2U",
   "license": "UNLICENSED",
@@ -15,8 +16,10 @@
     "@babel/runtime": "^7.15.3",
     "babel-loader": "^8.2.2",
     "css-loader": "^6.2.0",
+    "html-loader": "^4.2.0",
     "html-webpack-plugin": "^5.3.2",
     "http-server": "^0.11.1",
+    "mini-css-extract-plugin": "^2.7.7",
     "style-loader": "^3.2.1",
     "webpack": "^5.51.1",
     "webpack-cli": "^4.8.0",
